# CodeForces

./: .gitattributes  CMakeLists.txt  Labyrinth  Labyrinth.cpp  README  README.md  scrap.cpp
1000/: BoardMoves.cpp  CandyBags.cpp  DisturbedPeople.cpp  SuperheroTransformation.cpp
1200/: AccurateLee.cpp  AlternatingSubsequence.cpp  BoatsCompetition.cpp  K-thNotDivisibleByN.cpp  K-thNotDivisibleByNBinarySearch.cpp  LevelStatistics.cpp  MagicalCalendar.cpp  MakeItGood.cpp  NeighborGrid.cpp  OddSelection.cpp  OmkarAndWaterslide.cpp  SameParitySummands.cpp  SequenceWithDigits.cpp  SortedAdjacentDifferences.cpp  TernaryString.cpp  TernaryXOR.cpp  XXXXX.cpp  YoungExplorers.cpp
1300/: MereArray.cpp  Polygon.cpp
1400/: ApplejackAndStorages.cpp  AsSimpleAsOneAndTwo.cpp  BSTNewYearAndAscentSequence.cpp  BasketballExercise.cpp  Books.cpp  ConstanzesMachine.cpp  CreateTheTeams.cpp  ElementExtermination.cpp  KForThePriceOfOneEasy.cpp  NEKOsMazeGame.cpp  NewYearAndAscentSequence.cpp  NumberGame.cpp  OddSum.cpp  RationalLee.cpp  RotationMatching.cpp  TwoButtons.cpp  UniversalSolution.cpp  ValhallaSiege.cpp  ZeroRemainderArray.cpp
1600/: .DestroyingArray.cpp.swp  a.out  k-Tree.cpp
1700/: CowAndSnacks.cpp  CowAndSnacksDSU  CowAndSnacksDSU.cpp  a.out
800/: ABit++.cpp  BeautifulMatrix.cpp  Bit++.cpp  BoyOrGirl.cpp  DominoPiling.cpp  HelpfulMaths.cpp  MostUnstableArray.cpp  NextRound.cpp  PetyaAndStrings.cpp  StonesOnTheTable.cpp  Team.cpp  TwoArraysAndSwaps.cpp  WaterMelon.cpp  WayTooLongWords.cpp  WordCapitalization.cpp
900/: Football.cpp  HQ9+.cpp  Twins.cpp
ACM-ICPC/2020-NARPC/: B.cpp  C.cpp  JaneEyre.cpp
ACM-ICPC/NCPC-2017/: B  B.cpp  E.cpp  J  J.cpp
ACM-ICPC/PNCW-2016/: U  U.cpp  V.cpp  W  W.cpp  X  X.cpp  Y  Y.cpp  a.out
ACM-ICPC/PNRC2014/: Diamonds.cpp  Majority.cpp  R.cpp  U  U.cpp  W  W.cpp
ACM-ICPC/PNRPC-2015/: T.cpp  U  U.cpp  V.cpp  a.out
ACM-ICPC/SFU/2021-1/: Depression.cpp  EugenyandPlayList.cpp  a.out
ACM-ICPC/SFU/SFUPC 2020/: JitterMinimization.cpp
ACM-ICPC/SFU/week16/: RecyclingBottles.cpp  SummerCamp.cpp  UEFAChampionsLeague.cpp
ACM-ICPC/SFU/week17/: QueriesOnAString.cpp
ACM-ICPC/SFU/week19/: EquidistantString.cpp  Exam.cpp  Queue.cpp
ACM-ICPC/SFU/week20/: GivenLandSofD.cpp  PetersSmokes.cpp  TheSameCalendar.cpp  a.out
ACM-ICPC/UBC/CF540/: A.cpp  a.out
ACM-ICPC/UBC/CF544/: B.cpp  C.cpp  D.cpp
ACM-ICPC/UBC/CF650/: ShortSubStrings.cpp  SocialDistance.cpp
ACM-ICPC/UBC/tryout/: A.cpp  I.cpp  J.cpp  K.cpp
ACM-ICPC/UBC_Intro_Session/: A.cpp  B.cpp  C.cpp  D.cpp
Google/CodeJam/2020/1A/: PatternMatching.cpp
Google/CodeJam/2021/1A/: AppendSort  AppendSort.cpp
Google/CodeJam/2021/Qualification/: MoonsAndUmbrellas  MoonsAndUmbrellas.cpp  Reversort  Reversort.cpp  ReversortEngineering.cpp
Google/KickStart/2019/A/: Parcels.cpp  Training  Training.cpp
Google/KickStart/2021/: K-GoodnessString  K-GoodnessStrings.cpp  LShapedPlots  LShapedPlots.cpp
contests/694/: B  B.cpp  StrangePartition.cpp
practice/ICPC/: E.cpp  a.out
practice/ICPC/2020-NARPC/5/: A.cpp  KillingChaos.cpp  a.out
practice/ICPC/div2/PNRC2014/: Polyhedra.cpp  a.out
practice/SFU/2021-1/: A.cpp  C.cpp  DiagonalCut.cpp  TurnTheRectangles.cpp
practice/SFU/week16/: RestoringPainting.cpp
practice/SFU/week17/: DinnerWithEmma.cpp  TheTime.cpp  TrickySum.cpp  ZSort.cpp
practice/SFU/week19/: JohnyLikesNumbers.cpp
practice/SFU/week20/: TelephoneNumber.cpp  a.out
practice/UBC/CF540/: B.cpp
practice/UBC/CF544/: A.cpp
practice/UBC/CF650/: EvenArray.cpp  FlyingSortEasy.cpp  NecklaceAssembly.cpp  TaskOnTheBoard.cpp
practice/UBC/tryout/: B.cpp  F.cpp  H.cpp  scrap.cpp
