cmake_minimum_required(VERSION 3.16)
project(CodeForces)

set(CMAKE_CXX_STANDARD 17)

#add_executable(CodeForces 800/WaterMelon.cpp 800)
#add_executable(ABit++ 800/Bit++.cpp)
add_executable(WayTooLongWords 800/WayTooLongWords.cpp)
add_executable(WaterMelon 800/WaterMelon.cpp)
add_executable(Bit++ 800/Bit++.cpp)
add_executable(Team 800/Team.cpp)
add_executable(DominoPiling 800/DominoPiling.cpp)
add_executable(NextRound 800/NextRound.cpp)
add_executable(PetyaAndStrings 800/PetyaAndStrings.cpp)
add_executable(BeautifulMatrix 800/BeautifulMatrix.cpp)
add_executable(HelpfulMaths 800/HelpfulMaths.cpp)
add_executable(WordCapitalization 800/WordCapitalization.cpp)
add_executable(StonesOnTheTable 800/StonesOnTheTable.cpp)
add_executable(BoyOrGirl 800/BoyOrGirl.cpp)
add_executable(Football 900/Football.cpp)
add_executable(Twins 900/Twins.cpp)
add_executable(HQ9+ 900/HQ9+.cpp)
add_executable(SuperheroTransformation 1000/SuperheroTransformation.cpp)
add_executable(DisturbedPeople 1000/DisturbedPeople.cpp)
add_executable(CandyBags 1000/CandyBags.cpp)
add_executable(BoatsCompetition 1200/BoatsCompetition.cpp)
add_executable(OmkarAndWaterslide 1200/OmkarAndWaterslide.cpp)
add_executable(MakeItGood 1200/MakeItGood.cpp)
add_executable(NeighborGrid 1200/NeighborGrid.cpp)
add_executable(MagicalCalendar 1200/MagicalCalendar.cpp)
add_executable(AccurateLee 1200/AccurateLee.cpp)
add_executable(XXXXX 1200/XXXXX.cpp)
add_executable(OddSelection 1200/OddSelection.cpp)
add_executable(YoungExplorers 1200/YoungExplorers.cpp)
add_executable(SequenceWithDigits 1200/SequenceWithDigits.cpp)
add_executable(TernaryString 1200/TernaryString.cpp)
add_executable(K-thNotDivisibleByN 1200/K-thNotDivisibleByN.cpp)
add_executable(K-thNotDivisibleByNBinarySearch 1200/K-thNotDivisibleByNBinarySearch.cpp)
add_executable(AlternatingSubsequence 1200/AlternatingSubsequence.cpp)
add_executable(SameParitySummands 1200/SameParitySummands.cpp)