cmake_minimum_required(VERSION 3.16)
project(CodeForces)

set(CMAKE_CXX_STANDARD 17)

#add_executable(CodeForces 800/WaterMelon.cpp 800)
#add_executable(ABit++ 800/Bit++.cpp)
add_executable(WayTooLongWords 800/WayTooLongWords.cpp)
add_executable(WaterMelon 800/WaterMelon.cpp)
add_executable(Bit++ 800/Bit++.cpp)
add_executable(Team 800/Team.cpp)
add_executable(DominoPiling 800/DominoPiling.cpp)
add_executable(NextRound 800/NextRound.cpp)
add_executable(PetyaAndStrings 800/PetyaAndStrings.cpp)
add_executable(BeautifulMatrix 800/BeautifulMatrix.cpp)
add_executable(HelpfulMaths 800/HelpfulMaths.cpp)
add_executable(WordCapitalization 800/WordCapitalization.cpp)
add_executable(StonesOnTheTable 800/StonesOnTheTable.cpp)
add_executable(BoyOrGirl 800/BoyOrGirl.cpp)
add_executable(Football 900/Football.cpp)
add_executable(Twins 900/Twins.cpp)
add_executable(HQ9+ 900/HQ9+.cpp)
add_executable(SuperheroTransformation 1000/SuperheroTransformation.cpp)
add_executable(DisturbedPeople 1000/DisturbedPeople.cpp)
add_executable(CandyBags 1000/CandyBags.cpp)
add_executable(BoatsCompetition 1200/BoatsCompetition.cpp)
add_executable(OmkarAndWaterslide 1200/OmkarAndWaterslide.cpp)
add_executable(MakeItGood 1200/MakeItGood.cpp)
add_executable(NeighborGrid 1200/NeighborGrid.cpp)
add_executable(MagicalCalendar 1200/MagicalCalendar.cpp)
add_executable(AccurateLee 1200/AccurateLee.cpp)
add_executable(XXXXX 1200/XXXXX.cpp)
add_executable(OddSelection 1200/OddSelection.cpp)
add_executable(YoungExplorers 1200/YoungExplorers.cpp)
add_executable(SequenceWithDigits 1200/SequenceWithDigits.cpp)
add_executable(TernaryString 1200/TernaryString.cpp)
add_executable(K-thNotDivisibleByN 1200/K-thNotDivisibleByN.cpp)
add_executable(K-thNotDivisibleByNBinarySearch 1200/K-thNotDivisibleByNBinarySearch.cpp)
add_executable(AlternatingSubsequence 1200/AlternatingSubsequence.cpp)
add_executable(SameParitySummands 1200/SameParitySummands.cpp)
add_executable(SortedAdjacentDifferences 1200/SortedAdjacentDifferences.cpp)
add_executable(LevelStatistics 1200/LevelStatistics.cpp)
add_executable(TernaryXOR 1200/TernaryXOR.cpp)
add_executable(MereArray 1300/MereArray.cpp)
add_executable(PrefixFlipEasyVersion 1300/PrefixFlipEasyVersion.cpp)
add_executable(Polygon 1300/Polygon.cpp)
add_executable(ApplejackAndStorages 1400/ApplejackAndStorages.cpp)
add_executable(CreateTheTeams 1400/CreateTheTeams.cpp)
add_executable(UniversalSolution 1400/UniversalSolution.cpp)
add_executable(ElementExtermination 1400/ElementExtermination.cpp)
add_executable(TwoButtons 1400/TwoButtons.cpp)
add_executable(ZeroRemainderArray 1400/ZeroRemainderArray.cpp)
add_executable(NumberGame 1400/NumberGame.cpp)
add_executable(ConstanzesMachine 1400/ConstanzesMachine.cpp)
add_executable(BasketballExercise 1400/BasketballExercise.cpp)
add_executable(AsSimpleAsOneAndTwo 1400/AsSimpleAsOneAndTwo.cpp)
add_executable(RationalLee 1400/RationalLee.cpp)
add_executable(NEKOsMazeGame 1400/NEKOsMazeGame.cpp)
add_executable(BSTNewYearAndAscentSequence 1400/BSTNewYearAndAscentSequence.cpp)
add_executable(NewYearAndAscentSequence 1400/NewYearAndAscentSequence.cpp)
add_executable(KForThePriceOfOneEasy 1400/KForThePriceOfOneEasy.cpp)
add_executable(ValhallaSiege 1400/ValhallaSiege.cpp)